crates/vise/tests/ui/metrics/bogus_buckets.stderr
error[E0277]: the trait bound `Buckets: From<&str>` is not satisfied
 --> tests/ui/metrics/bogus_buckets.rs:6:25
  |
6 |     #[metrics(buckets = "42")]
  |                         ^^^^ the trait `From<&str>` is not implemented for `Buckets`
7 |     histogram: Histogram<u64>,
  |                --------- required by a bound introduced by this call
  |
  = help: the trait `From<&'static [f64; N]>` is implemented for `Buckets`
  = note: required for `&str` to implement `Into<Buckets>`
note: required by a bound in `MetricBuilder::<(), L>::with_buckets`
 --> src/builder.rs
  |
  |     pub fn with_buckets(self, buckets: impl Into<Buckets>) -> MetricBuilder<Buckets, L> {
  |                                             ^^^^^^^^^^^^^ required by this bound in `MetricBuilder::<(), L>::with_buckets`
